kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jumper-api
  labels:
    app: jumper-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jumper-api
  template:
    metadata:
      labels:
        app: jumper-api
    spec:
      containers:
      - name: jumper-api
        image: somnidev/jumper-api:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jumper-api
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: jumper-api
  type: ClusterIP
