kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jumper-frontend
  labels:
    app: jumper-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jumper-frontend
  template:
    metadata:
      labels:
        app: jumper-frontend
    spec:
      containers:
      - name: jumper-frontend
        image: somnidev/jumper-frontend:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jumper-frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: jumper-frontend
  type: ClusterIP
