kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: jumper-api
            port:
              number: 80
      - path: /([a-zA-Z0-9]{6}$)
        pathType: Prefix
        backend:
          service:
            name: jumper-api
            port:
              number: 80 
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: jumper-frontend
            port:
              number: 80
